ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /blackrockdigital
        backend:
          serviceName: blackrockdigital-svc
          servicePort: 80
      - path: /bdavix
        backend:
          serviceName: bdavix-svc
          servicePort: 80
      - path: /elasticsearch
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 5601
